--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
+    "postinstall": "prisma generate",
     "start": "next start",
     "lint": "eslint"
   },
@@ -18,7 +19,6 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.2",
     "openai": "^6.16.0",
-    "prisma": "^5.22.0",
     "qrcode": "^1.5.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -26,6 +26,7 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "prisma": "^5.22.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.6",
